--- a/Core/MVVM/View/CharacterCreationWindow.xaml
+++ b/Core/MVVM/View/CharacterCreationWindow.xaml
@@ -5,12 +5,14 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:TheExpanseRPG.Core.MVVM.View"
         xmlns:custom="clr-namespace:TheExpanseRPG.CustomControls"
-        xmlns:vm="clr-namespace:TheExpanseRPG.Core.MVVM.ViewModel" xmlns:usercontrols="clr-namespace:TheExpanseRPG.UserControls"
+        xmlns:vm="clr-namespace:TheExpanseRPG.Core.MVVM.ViewModel" 
+        xmlns:usercontrols="clr-namespace:TheExpanseRPG.UserControls"
         mc:Ignorable="d"
         WindowStartupLocation="CenterScreen"
         MouseDown="Window_MouseDown"
         Style="{StaticResource ExpanseWindowStyle}"
         Title="CharacterCreationWindow" Height="700" Width="650">
+    
     <Border BorderBrush="{StaticResource EXPDarkBlueBrush}" BorderThickness="3">
         <Grid>
             <Grid.Resources>
@@ -38,7 +40,8 @@
                 <RowDefinition Height="40"/>
                 <RowDefinition/>
             </Grid.RowDefinitions>
-            <usercontrols:WindowHeaderWithLogo Grid.Row="0" Grid.ColumnSpan="10"/>
+            
+            <usercontrols:WindowHeaderWithLogo Grid.ColumnSpan="10"/>
             <StackPanel Grid.Row="1" HorizontalAlignment="Center">
                 <custom:CutCorner BorderCuts="0,1,0,0" >
                     <Button Content="Origin" Command="{Binding NavigateToOriginSelect}"/>
@@ -85,7 +88,7 @@
             </Grid>
 
 
-            <ContentControl Content="{Binding NavigationService.CurrentViewModel}" Grid.Column="1" Grid.Row="1" >
+            <ContentControl Content="{Binding CurrentInnerViewModel}" Grid.Column="1" Grid.Row="1" >
                 
             </ContentControl>
         </Grid>
